--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,13 +23,13 @@ jobs:
       fail-fast: false
       matrix:
         config:
-          - { target: "x86_64-unknown-linux-gnu", os: "ubuntu-latest", arch: "amd64", extension: "" }
+          - { target: ["x86_64-unknown-linux-gnu", "wasm32-wasi", "wasm32-unknown-unknown"], os: "ubuntu-latest", arch: "amd64", extension: "" }
           # TODO: the cross-compile to Linux aarch64 fails with a pkg-config error that
           # I don't yet know how to resolve
-          # - { target: "aarch64-unknown-linux-gnu", os: "ubuntu-latest", arch: "aarch64", extension: "" }
-          - { target: "x86_64-apple-darwin", os: "macos-latest", arch: "amd64", extension: "" }
-          - { target: "aarch64-apple-darwin", os: "macos-latest", arch: "aarch64", extension: "" }
-          - { target: "x86_64-pc-windows-msvc", os: "windows-latest", arch: "amd64", extension: ".exe" }
+          # - { target: ["aarch64-unknown-linux-gnu", "wasm32-wasi", "wasm32-unknown-unknown"], os: "ubuntu-latest", arch: "aarch64", extension: "" }
+          - { target: ["x86_64-apple-darwin", "wasm32-wasi", "wasm32-unknown-unknown"], os: "macos-latest", arch: "amd64", extension: "" }
+          - { target: ["aarch64-apple-darwin", "wasm32-wasi", "wasm32-unknown-unknown"], os: "macos-latest", arch: "aarch64", extension: "" }
+          - { target: ["x86_64-pc-windows-msvc", "wasm32-wasi", "wasm32-unknown-unknown"], os: "windows-latest", arch: "amd64", extension: ".exe" }
     steps:
       - uses: actions/checkout@v3
       - name: Install Rust
