--- a/Cargo.toml
+++ b/Cargo.toml
@@ -20,3 +20,8 @@ git = "https://github.com/fermyon/bindle"
 tag = "v0.8.2"
 default-features = false
 features = ["client"]
+
+[patch.crates-io]
+# Using fork to bump nested dep sqlite3-parser to 0.9.0 for Windows build fix
+# Pending related upstream PR https://github.com/libsql/libsql-client-rs/pull/32
+libsql-client = { git = "https://github.com/vdice/libsql-client-rs", branch = "chore/bump-deps"}
